feat: make metadataCommunication optional (#82)
* feat: make metadateCommunication optional

* ci: code coverage with jacoco